Seed vendor package permissions for production
The vendor production path now assigns the three existing packages their inherited feature sets, widens package remarks for structured policy metadata, and runs the seed during CD database sync. Production defaults also avoid hardcoded external infrastructure credentials.

Constraint: Vendor backend writes only the vendor database and reuses sys_tenant_package instead of introducing a new entitlement table

Rejected: Leave package permissions as manual data | remote deploy would not reproduce the local package assignment

Confidence: high

Scope-risk: moderate

Directive: Keep CD migration list updated when adding package seed scripts, otherwise remote deployments can miss database state

Tested: mvn -pl ruoyi-modules/ruoyi-system,ruoyi-admin -am -DskipTests=false -Dtest=TenantPackageOpenControllerUnitTest -Dsurefire.failIfNoSpecifiedTests=false test; mysql vendor package verification; git diff --check

Not-tested: Remote GitHub Actions deployment secrets and target host execution